// IEEE-UCF Website Database Schema
// Generate visual diagram at: https://dbdiagram.io
// Last Updated: November 18, 2025

// ==== Enums ====

enum officer_role_enum {
  "Executive Chair"
  "Vice Chair"
  "Treasurer"
  "Secretary"
  "Project Chair"
  "Workshop Chair"
  "Conference Chair"
  "Outreach Chair"
  "Service Chair"
  "Social Chair"
  "Professional Development Chair"
  "Marketing Chair"
  "Software Chair"
}

enum permission_enum {
  scan_attendance
  view_statistics
  manage_context
}

enum context_type_enum {
  global
  committee
  project
}

enum gender_enum {
  M
  F
  NB
  O
  PNTS
}

enum sponsorship_tier_enum {
  Bronze
  Silver
  Gold
}

enum event_host_type_enum {
  club
  committee
  project
  member
}

// ==== Authentication Tables (NextAuth) ====

Table users {
  id uuid [pk]
  name text
  email varchar(255) [not null, unique]
  email_verified timestamp
  image text
  discordID varchar(64) [unique]
  
  indexes {
    id [name: 'users_idx_id']
    discordID [name: 'users_idx_discord_id']
  }
}

Table accounts {
  id uuid [pk]
  user_id uuid [not null, ref: > users.id]
  type varchar(255) [not null]
  provider varchar(255) [not null]
  provider_account_id varchar(255) [not null]
  refresh_token text
  access_token text
  expires_at integer
  token_type varchar(255)
  scope varchar(255)
  id_token text
  session_state varchar(255)
}

Table sessions {
  session_token varchar(255) [pk]
  user_id uuid [not null, ref: > users.id]
  expires timestamp [not null]
}

// ==== Core Member Tables ====

Table members {
  id uuid [pk]
  user_id uuid [not null, unique, ref: - users.id]
  first_name varchar(255) [not null]
  middle_name varchar(255)
  last_name varchar(255) [not null]
  officer_role officer_role_enum
  administrator boolean [not null, default: false]
  officer_status boolean [not null, default: false]
  biography text
  dues_paid boolean [not null, default: false]
  discordID varchar(64) [unique]
  date_of_birth date [not null]
  personal_email varchar(255) [not null, unique]
  ucf_email varchar(255) [not null, unique]
  phone_number varchar(20)
  major varchar(255) [not null]
  gender gender_enum [not null]
  graduation_year integer [not null]
  portrait_url varchar(500)
  resume_url text
  linkedin_url text
  github_url text
  website_url text
  active boolean [not null, default: true]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  
  indexes {
    id [name: 'members_idx_id']
    user_id [name: 'members_idx_user_id']
    discordID [name: 'members_idx_discordID']
    personal_email [name: 'members_idx_personal_email']
    ucf_email [name: 'members_idx_ucf_email']
    officer_status [name: 'members_idx_officer_status']
    officer_role [name: 'members_idx_officer_role']
    administrator [name: 'members_idx_administrator']
    dues_paid [name: 'members_idx_dues_paid']
    graduation_year [name: 'members_idx_graduation_year']
    major [name: 'members_idx_major']
    gender [name: 'members_idx_gender']
    created_at [name: 'members_idx_created_at']
    updated_at [name: 'members_idx_updated_at']
    (first_name, last_name) [name: 'members_idx_full_name']
  }
}

// ==== Committee Tables ====

Table committees {
  id uuid [pk]
  title varchar(255) [not null]
  slug varchar(64) [unique]
  about text [not null]
  discord_role_id varchar(64)
  active boolean [not null, default: true]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  
  indexes {
    id [name: 'committees_idx_id']
    title [name: 'committees_idx_title']
    slug [name: 'committees_idx_slug']
    created_at [name: 'committees_idx_created_at']
    updated_at [name: 'committees_idx_updated_at']
  }
}

Table committee_members {
  id uuid [pk]
  committee_id uuid [not null, ref: > committees.id]
  member_id uuid [not null, ref: > members.id]
  is_chair boolean [not null, default: false]
  
  indexes {
    id [name: 'committee_members_idx_id']
    committee_id [name: 'committee_members_idx_committee_id']
    member_id [name: 'committee_members_idx_member_id']
    is_chair [name: 'committee_members_idx_is_chair']
    (committee_id, member_id) [unique, name: 'committee_member_unique']
  }
}

// ==== Event Tables ====

Table events {
  id uuid [pk]
  title varchar(255) [not null]
  location varchar(255) [not null]
  host_type event_host_type_enum [not null, default: 'committee']
  host_id uuid [note: 'Polymorphic FK: committee/project/member based on host_type']
  slug varchar(64) [unique]
  start_time timestamp [not null]
  end_time timestamp
  requires_dues boolean [not null, default: false]
  active boolean [not null, default: true]
  description text [not null]
  flyer_url varchar(500)
  rsvp_link varchar(500)
  photo_urls text
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  
  indexes {
    id [name: 'events_idx_id']
    (host_type, host_id) [name: 'events_idx_host']
    start_time [name: 'events_idx_start_time']
    title [name: 'events_idx_title']
    location [name: 'events_idx_location']
    created_at [name: 'events_idx_created_at']
    updated_at [name: 'events_idx_updated_at']
  }
}

Table event_attendees {
  id uuid [pk]
  event_id uuid [not null, ref: > events.id]
  member_id uuid [not null, ref: > members.id]
  scanner_id uuid [ref: > members.id, note: 'Member who scanned QR code (nullable for self-check-in)']
  timestamp timestamp [not null, default: `now()`]
  
  indexes {
    id [name: 'event_attendees_idx_id']
    event_id [name: 'event_attendees_idx_event_id']
    member_id [name: 'event_attendees_idx_member_id']
    scanner_id [name: 'event_attendees_idx_scanner_id']
    timestamp [name: 'event_attendees_idx_timestamp']
    (event_id, member_id) [unique, name: 'event_attendee_unique']
  }
}

// ==== Project Tables ====

Table projects {
  id uuid [pk]
  title varchar(255) [not null]
  slug varchar(64) [unique]
  overview text [not null]
  hardware_info text
  software_info text
  skills text [note: 'Comma-separated skills list']
  photo_urls text
  discord_role_id varchar(64)
  active boolean [not null, default: true]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  
  indexes {
    id [name: 'projects_idx_id']
    title [name: 'projects_idx_title']
    slug [name: 'projects_idx_slug']
    created_at [name: 'projects_idx_created_at']
    updated_at [name: 'projects_idx_updated_at']
  }
}

Table project_members {
  id uuid [pk]
  project_id uuid [not null, ref: > projects.id]
  member_id uuid [not null, ref: > members.id]
  is_lead boolean [not null, default: false]
  
  indexes {
    id [name: 'project_members_idx_id']
    project_id [name: 'project_members_idx_project_id']
    member_id [name: 'project_members_idx_member_id']
    is_lead [name: 'project_members_idx_is_lead']
    (project_id, member_id) [unique, name: 'project_member_unique']
  }
}

// ==== Sponsorship Tables ====

Table sponsorships {
  id uuid [pk]
  company_name varchar(255) [not null]
  money_donated integer [not null, note: 'Amount in cents']
  description text
  tier sponsorship_tier_enum [not null]
  company_logo_url varchar(500)
  website_url varchar(500)
  contact_email varchar(255) [not null]
  active boolean [not null, default: true]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  
  indexes {
    id [name: 'sponsorships_idx_id']
    company_name [name: 'sponsorships_idx_company_name']
    tier [name: 'sponsorships_idx_tier']
    created_at [name: 'sponsorships_idx_created_at']
    updated_at [name: 'sponsorships_idx_updated_at']
  }
}

// ==== Permission Tables ====

Table member_permissions {
  id uuid [pk]
  member_id uuid [not null, ref: > members.id]
  granted_by_id uuid [ref: > members.id, note: 'Member who granted permission (nullable)']
  context_type context_type_enum [not null]
  context_id uuid [note: 'Polymorphic FK: committee/project based on context_type (NULL for global)']
  permission permission_enum [not null]
  active boolean [not null, default: true]
  created_at timestamp [not null, default: `now()`]
  expires_at timestamp [note: 'Optional expiration for temporary permissions']
  
  indexes {
    member_id [name: 'member_permissions_idx_member']
    (context_type, context_id) [name: 'member_permissions_idx_context']
    (member_id, context_type, context_id, permission) [unique, name: 'member_permission_unique']
  }
}
